--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,6 +4,12 @@ djangorestframework==3.11.0
 drf-extensions==0.6.0
 drf-yasg==1.17.1
 gunicorn==20.0.4
+pytest==5.4.2
+pytest-asyncio==0.12.0
+pytest-django==3.9.0
+pytest-tornasync==0.6.0.post2
+pytest-trio==0.5.2
 psycopg2-binary==2.8.5
 sentry-asgi==0.2.0
 sentry-sdk==0.14.4
+sirius-sdk==1.0.4
