--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     image: postgres:9.6
     environment:
       - POSTGRES_PASSWORD=postgres
+
+  redis:
+    image: redis:latest
+
   application:
     build: 
       context: .
@@ -16,3 +20,4 @@ services:
       - DATABASE_HOST=db
     depends_on:
       - db
+      - redis
