--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,10 @@
+aioredis==1.3.1
 channels==2.4.0
 channels-redis==2.4.2
 daphne==2.5.0
 Django==2.2
 django-downloadview==1.9
+django-redis==4.12.1
 djangorestframework==3.11.0
 drf-extensions==0.6.0
 drf-yasg==1.17.1
@@ -13,6 +15,7 @@ pytest-django==3.9.0
 pytest-tornasync==0.6.0.post2
 pytest-trio==0.5.2
 psycopg2-binary==2.8.5
+redis==3.5.3
 sentry-asgi==0.2.0
 sentry-sdk==0.14.4
 sirius-sdk==1.0.22
