--- a/ci/docker-compose.dev.yml
+++ b/ci/docker-compose.dev.yml
@@ -8,6 +8,12 @@ services:
   application:
     environment:
       - DJANGO_SETTINGS_MODULE=settings.develop
+      - AGENT_CREDENTIALS
+      - AGENT_SERVER_ADDRESS
+      - AGENT_ENTITY
+      - AGENT_MY_VERKEY
+      - AGENT_MY_SECRET_KEY
+      - AGENT_VERKEY
     volumes:
       - ./app:/app
       - ./ci:/ci
